--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        // "noImplicitAny": true,
         "allowJs": true,
         "module": "ESNext",
         "moduleResolution": "bundler",
@@ -12,6 +11,7 @@
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true,
         "noEmit": true,
+        "preserveConstEnums": true,
         "paths": {
             "@/*": ["./resources/js/*"],
             "ziggy-js": ["./vendor/tightenco/ziggy"]
@@ -21,6 +21,6 @@
         "resources/js/**/*.ts",
         "resources/js/**/*.tsx",
         "resources/js/**/*.d.ts",
-        "resources/js/Pages/Whiteboard/Partials/BackgroundPanel.tsx"
+        "resources/js/Pages/Projects/Partials/BackgroundPanel.tsx"
     ]
 }
